libusb-dev dependency added

--- a/aiserver/Dockerfile
+++ b/aiserver/Dockerfile
@@ -5,6 +5,11 @@ ARG DG_CUSTOM_WHEEL
 
 WORKDIR /degirum
 
+# install prerequisites
+RUN apt-get update \
+    && apt-get install -y libusb-dev \
+    && rm -rf /var/lib/apt/lists/*
+
 # install PySDK
 COPY Dockerfile ${DG_CUSTOM_WHEEL} ./
 RUN if [ -z "${DG_CUSTOM_WHEEL}" ] ; then \
