--- a/aiserver/Dockerfile
+++ b/aiserver/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /degirum
 
 # install prerequisites
 RUN apt-get update \
-    && apt-get install -y libusb-dev \
+    && apt-get install -y libusb-1.0-0-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # install PySDK
