--- a/aiserver/Dockerfile
+++ b/aiserver/Dockerfile
@@ -1,25 +1,21 @@
 FROM python:3.9-slim
 
-# custom whl installation support
 ARG DG_CUSTOM_WHEEL
 
 WORKDIR /degirum
 
-# install prerequisites
+COPY Dockerfile ${DG_CUSTOM_WHEEL} ./
+
 RUN apt-get update \
     && apt-get install -y libusb-1.0-0-dev \
-    && rm -rf /var/lib/apt/lists/*
-
-# install PySDK
-COPY Dockerfile ${DG_CUSTOM_WHEEL} ./
-RUN if [ -z "${DG_CUSTOM_WHEEL}" ] ; then \
+    && rm -rf /var/lib/apt/lists/* \
+    && pip install --upgrade pip \
+    && if [ -z "${DG_CUSTOM_WHEEL}" ] ; then \
         pip install degirum --extra-index-url https://DeGirum.github.io/simple ; \
     else \
-        pip install ${DG_CUSTOM_WHEEL} ;\
-    fi
-
-# crete model zoo folder
-RUN mkdir -p /zoo
+        pip install ${DG_CUSTOM_WHEEL} ; \
+    fi \
+    && mkdir -p /zoo
 
 # run degirum AI server
 CMD [ "python", "-m", "degirum.server", "--zoo", "/zoo" ]
