--- a/aiservercoral/Dockerfile
+++ b/aiservercoral/Dockerfile
@@ -15,7 +15,7 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/* \
     && pip install --upgrade pip \
     && if [ -z "${DG_CUSTOM_WHEEL}" ] ; then \
-        pip install degirum --extra-index-url https://DeGirum.github.io/simple ; \
+        pip install degirum ; \
     else \
         pip install ${DG_CUSTOM_WHEEL} ; \
     fi \
