--- a/aiserver/Dockerfile
+++ b/aiserver/Dockerfile
@@ -25,7 +25,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     ca-certificates \
     curl \
     gpg-agent \
-    gpg
+    gpg \
+    libgl1
 
 # Install ONNX runtime
 RUN \
