Added NPU driver installation to aiserver dockerfile, now OpenVINO NPU and GPU devices are supported from this container.

--- a/aiserver/Dockerfile
+++ b/aiserver/Dockerfile
@@ -66,6 +66,39 @@ RUN \
         rm -rf ezrknn-toolkit2; \
     fi
 
+# NPU Driver installation
+# Only performed on TARGETARCH=amd64
+RUN if [ -z "${BASE_IMAGE}" ] ; then \
+    echo "Base Image not set, so x86_64 system, starting NPU driver installation." >> /buildLog.txt; \
+    apt update && apt install -y wget udev && \
+    wget https://github.com/intel/linux-npu-driver/releases/download/v1.5.1/intel-driver-compiler-npu_1.5.1.20240708-9842236399_ubuntu22.04_amd64.deb && \
+    wget https://github.com/intel/linux-npu-driver/releases/download/v1.5.1/intel-fw-npu_1.5.1.20240708-9842236399_ubuntu22.04_amd64.deb && \
+    wget https://github.com/intel/linux-npu-driver/releases/download/v1.5.1/intel-level-zero-npu_1.5.1.20240708-9842236399_ubuntu22.04_amd64.deb; \
+    apt update && apt install -y libtbb12; \
+    dpkg -i intel-driver-compiler-npu_1.5.1.20240708-9842236399_ubuntu22.04_amd64.deb || apt-get install -f; \
+    dpkg -i intel-fw-npu_1.5.1.20240708-9842236399_ubuntu22.04_amd64.deb || apt-get install -f; \
+    dpkg -i intel-level-zero-npu_1.5.1.20240708-9842236399_ubuntu22.04_amd64.deb || apt-get install -f; \
+    if dpkg -l | grep -q level-zero; then \
+        echo "level-zero already installed." >> /buildLog.txt; \
+    else \
+        wget https://github.com/oneapi-src/level-zero/releases/download/v1.17.6/level-zero_1.17.6+u22.04_amd64.deb && \
+        wget https://github.com/oneapi-src/level-zero/releases/download/v1.17.6/level-zero-devel_1.17.6+u22.04_amd64.deb && \
+        dpkg -i level-zero*.deb && \
+        echo "Fetched and installed level-zero from GitHub." >> /buildLog.txt; \
+    fi; \
+    groupadd -f render && \
+    usermod -a -G render root && \
+    mkdir -p /dev/accel && \
+    mknod /dev/accel/accel0 c 261 0 && \
+    chown root:render /dev/accel/accel0 && \
+    chmod g+rw /dev/accel/accel0; \
+    mkdir -p /etc/udev/rules.d/; \
+    echo 'SUBSYSTEM=="accel", KERNEL=="accel*", GROUP="render", MODE="0660"' > /etc/udev/rules.d/10-intel-vpu.rules; \
+    udevadm control --reload-rules; \
+    udevadm trigger --subsystem-match=accel; \
+else echo "TARGETARCH is not amd64, skipping NPU installation. TARGETARCH is: $TARGETARCH" >> /buildLog.txt; fi
+
+
 # Install PySDK
 COPY Dockerfile ${DG_CUSTOM_WHEEL} ./
 RUN if [ -z "${DG_CUSTOM_WHEEL}" ] ; then \
